# relacc-python

./: .coverage  .gitignore  README.md  main-canvas.js  main-canvas.py  main-distribution.py  main-pairwise.py  main.js  main.py  package-lock.json  package.json  pyproject.toml  relacc_canvas_cli.py  relacc_cli.py  relacc_distribution_cli.py  relacc_pairwise_cli.py  run_all_pairwise_reports.py  vite.config.js
evaluation_plot_scripts/: plot_evaluation_results.py  plot_evaluation_results_v2.py  plot_sample_gesture_metric_pages.py
examples/: s1-arrow-t1.csv
lib/: relacc.js
lib/geom/: measure.js  point.js  pointset.js  rectangle.js  vector.js
lib/gestures/: gesture.js  pdollaralt.js  ptaligntype.js  summarygesture.js  summarygesture.js~
lib/utils/: args.js  csv.js  date.js  debug.js  json.js  math.js
relacc/: __init__.py  canvas.py  distribution_metrics.py  dtw.py  gesture_input.py  metrics.py  relacc.py
relacc/geom/: __init__.py  measure.py  point.py  pointset.py  rectangle.py  vector.py
relacc/gestures/: __init__.py  gesture.py  pdollaralt.py  ptaligntype.py  summarygesture.py
relacc/pipeline/: __init__.py  _common.py  dataset_discovery.py  distribution.py  one_vs_many.py  pair_evidence.py  pairwise.py  report_compare.py  report_exports.py  report_runner.py  report_schema.py  report_stats.py  reporting.py  reporting_raw.py
relacc/utils/: __init__.py  args.py  csv.py  date.py  debug.py  json.py  math.py  runlog.py
relacc_web/: __init__.py  __main__.py  app.py  report_cache.py  service.py
relacc_web/frontend/: index.html
relacc_web/static/: app.js  index.html  styles.css
scripts/: benchmark_dtw_performance.py  plot_dataset_class_gestures.py
test/: conftest.py  run-coverage.js
test/helpers/: math.js
test/spec/: relacc.spec.js  test_cli_main.py  test_cli_main_canvas.py  test_cli_main_distribution.py  test_cli_main_pairwise.py  test_console_scripts.py  test_distribution_metrics.py  test_dtw.py  test_evaluation_plot_results.py  test_file_readers.py  test_geometry.py  test_gesture_input.py  test_gestures.py  test_metrics.py  test_pipeline_and_cli.py  test_relacc.py  test_run_all_pairwise_reports.py
tests/: conftest.py  test_cli_main.py  test_cli_main_canvas.py  test_cross_language_parity.py
tests/geom/: test_measure.py  (+3 more)
(+53 files in other folders)
