[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relacc-python"
version = "1.1.0"
description = "Relative Accuracy Measures for Stroke Gestures (Python port)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Luis A. Leiva" }
]
dependencies = [
  "matplotlib>=3.8",
  "scipy>=1.13"
]

[project.scripts]
relacc = "relacc_cli:main"
relacc-canvas = "relacc_canvas_cli:main"
relacc-pairwise = "relacc_pairwise_cli:main"
relacc-distribution = "relacc_distribution_cli:main"
relacc-web = "relacc_web.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "httpx2>=2.0.0"
]
web = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn>=0.27"
]

[tool.setuptools]
packages = ["relacc", "relacc.geom", "relacc.gestures", "relacc.utils", "relacc.pipeline", "relacc_web"]
py-modules = ["relacc_cli", "relacc_canvas_cli", "relacc_pairwise_cli", "relacc_distribution_cli"]

[tool.setuptools.package-data]
relacc_web = ["static/*.html", "static/*.css", "static/*.js", "static/dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["."]
branch = false
omit = [
  "test/*",
  "worktrees/*",
  "relacc_web/static/*",
  "relacc_web/frontend/*"
]

[tool.coverage.report]
show_missing = true
